--- a/Nadir_html/Nadir.html
+++ b/Nadir_html/Nadir.html
@@ -6,12 +6,14 @@
     </head>
     <!-- our body code start from here -->
     <body>
-        <h1>Muhammad Nadir Khan</h1>
-        <form action="">
-            <fieldset>
-                <legend>Our run time form
-                </legend>
-            </fieldset>
-        </form>
+        <h1>Name  Muhammad Nadir</h1>
+        <h2>Roll No  21841</h2>
+        <h3>Section  CD</h3>
+        <h4>Submitted to  Sir Asif</h4>
+        <ol>
+            <li>Keyboard</li>
+            <li>Mouse</li>
+            <li>Usb</li>
+          </ol>
     </body>
 </html>
