--- a/Nadir_html/Nadir.html
+++ b/Nadir_html/Nadir.html
@@ -10,6 +10,7 @@
         <h2>Roll No  21841</h2>
         <h3>Section  CD</h3>
         <h4>Submitted to  Sir Asif</h4>
+        <h1>Input Devices</h1>
         <ol>
             <li>Keyboard</li>
             <li>Mouse</li>
